--- a/css/root.scss
+++ b/css/root.scss
@@ -34,7 +34,7 @@ $background-color:#E0F8FF;
 $primary-color:#0055FF;
 $success-color:#00B277;
 $danger-color:#FF2F2F;
-$warning-color:#C7B300;
+$warning-color:#E5EA00;
 $secondary-color:#969696;
 // #endregion
 
@@ -42,6 +42,6 @@ $secondary-color:#969696;
 $primary-hover-color:#0047D6;
 $success-hover-color:#009563;
 $danger-hover-color:#D40C0C;
-$warning-hover-color:#A09000;
+$warning-hover-color:#D4D900;
 $secondary-hover-color:#767676;
 // #endregion
