--- a/css/controls.scss
+++ b/css/controls.scss
@@ -164,6 +164,7 @@ body{
     }
     &.btn-primary{
         background-color: $primary-color;
+        color: #fff;
         &:hover{
             background-color: $primary-hover-color;
         }
